[AI] feat: 增加媒体库并优化网络电台操作
